fix: ResourceExporter 数据链路重构 — 去掉 i18n 猜测，改用 NPC_CONF traverse 映射
- 类注释重写：完整数据链路图（MG_CONF → Phase 2 traverse → NPC_REFRESH）
- 去掉 i18n/NPC_CONF.json 本地化名映射（纯猜测，匹配到大量无关 NPC）
- 新增 Phase 2：NPC_CONF genre=27 + traverse_data_type=2 → BAG_ITEM_CONF.name
- BAG_ITEM_CONF 优先使用 _2_P 补丁数据（item 100851 名称占位符→结晶花）
- 新增 disable:true 检查，过滤已禁用的刷新点
- 图标导出改进：icon→big_icon→NPC_OPTION_CONF 三级回退
- 去重键加入材料名，防止同一坐标不同材料被误过滤